# letterboxd-jellyfin

./: .dockerignore  .env.example  Dockerfile  README.md  config.py  docker-compose.yaml  docker-compose.yml  main.py  pyproject.toml
app/: cache.py  jellyfin.py  letterboxd.py  matcher.py  routes.py
static/css/: styles.css
static/js/: app.js
templates/: index.html
