[project]
name = "letterboxd-jellyfin"
version = "0.1.0"
description = "Letterboxd watchlist + Jellyfin library movie picker"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "jinja2>=3.1.4",
    "python-dotenv>=1.0.1",
    "requests>=2.32.0",
    "beautifulsoup4>=4.12.0",
    "letterboxdpy>=6.4.1",
]
